2019-11 - KubeCon NA/server-required/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: metalmatze-kubecon2019
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app.kubernetes.io/name: minio
