2019-11 - KubeCon NA/server-required/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: thanos
  namespace: metalmatze-kubecon2019
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: kubecon2019.observatorium.io
      http:
        paths:
          - path: /
            backend:
              serviceName: thanos-querier
              servicePort: 9090
          - path: /api/v1/receive
            backend:
              serviceName: thanos-receive
              servicePort: 19291
